// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `null`;

exports[`2. loading 1`] = `null`;

exports[`3. an article with no headline falls back to use shortheadline 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
              fill="black"
            />
          </svg>
          <div>
            Check your inbox
          </div>
        </div>
        <button>
          <svg
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="black"
            />
          </svg>
        </button>
      </div>
      <div>
        <div>
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    id="article-main"
  >
    <Helmet
      encodeSpecialCharacters={false}
    >
      <title>
        Some Short Headline
      </title>
      <meta
        content="max-image-preview:large"
        name="robots"
      />
      <meta
        content="Some Short Headline"
        name="article:title"
      />
      <meta
        content="The Times"
        name="article:publication"
      />
      <meta
        content="Some byline"
        name="author"
      />
      <meta
        content="Some Short Headline"
        property="og:title"
      />
      <meta
        content="article"
        property="og:type"
      />
      <meta
        content="https://url.io"
        property="og:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        property="og:image"
      />
      <meta
        content="Some Short Headline"
        name="twitter:title"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <meta
        content="https://url.io"
        name="twitter:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        name="twitter:image"
      />
      <script
        type="application/ld+json"
      >
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Short Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://url.io"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section","keywords":"Section:Some Section","articleId":"198c4b2f-ecec-4f34-be53-c89f83bc1b44","url":"https://url.io"}
      </script>
    </Helmet>
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div>
        <div>
          <div>
            <h1
              aria-level="1"
              role="heading"
            >
              Some Short Headline
            </h1>
            <div>
              <ArticleFlags
                color="rgba(255, 255, 255, 1)"
              />
            </div>
          </div>
        </div>
        <div>
          <figure>
            <div>
              <div>
                <div>
                  <img
                    alt="Some Caption"
                    fetchpriority="high"
                    src="https://crop169.io?resize=360"
                    srcSet="https://crop169.io?resize=360 360w,https://crop169.io?resize=520 520w,https://crop169.io?resize=680 680w,https://crop169.io?resize=860 860w,https://crop169.io?resize=1200 1200w,https://crop169.io?resize=1500 1500w"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <div>
                <div>
                  <div>
                    Some Caption
                  </div>
                  <div
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SOME CREDITS",
                      }
                    }
                  />
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div>
          <div>
            <div>
              <ArticleBylineWithLinks
                ast={
                  Array [
                    Object {
                      "byline": Array [
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "Some byline",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "inline",
                        },
                      ],
                    },
                  ]
                }
                color="#1D1D1B"
              />
            </div>
            <div />
            <div>
              <div>
                <DatePublication
                  date="2015-03-13T18:54:58.000Z"
                  publication="TIMES"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline=""
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article>
        <div>
          <div>
            <p>
              Some content
            </p>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline=""
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          isCommentEnabled={true}
          isSharingSavingEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "__typename": "StandardSlice",
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`4. an article with ads 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
              fill="black"
            />
          </svg>
          <div>
            Check your inbox
          </div>
        </div>
        <button>
          <svg
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="black"
            />
          </svg>
        </button>
      </div>
      <div>
        <div>
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    id="article-main"
  >
    <Helmet
      encodeSpecialCharacters={false}
    >
      <title>
        Some Headline
      </title>
      <meta
        content="max-image-preview:large"
        name="robots"
      />
      <meta
        content="Some Headline"
        name="article:title"
      />
      <meta
        content="The Times"
        name="article:publication"
      />
      <meta
        content="Some byline"
        name="author"
      />
      <meta
        content="Some Headline"
        property="og:title"
      />
      <meta
        content="article"
        property="og:type"
      />
      <meta
        content="https://url.io"
        property="og:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        property="og:image"
      />
      <meta
        content="Some Headline"
        name="twitter:title"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <meta
        content="https://url.io"
        name="twitter:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        name="twitter:image"
      />
      <script
        type="application/ld+json"
      >
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://url.io"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section","keywords":"Section:Some Section","articleId":"198c4b2f-ecec-4f34-be53-c89f83bc1b44","url":"https://url.io"}
      </script>
    </Helmet>
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div>
        <div>
          <div>
            <h1
              aria-level="1"
              role="heading"
            >
              Some Headline
            </h1>
            <div>
              <ArticleFlags
                color="rgba(255, 255, 255, 1)"
              />
            </div>
          </div>
        </div>
        <div>
          <figure>
            <div>
              <div>
                <div>
                  <img
                    alt="Some Caption"
                    fetchpriority="high"
                    src="https://crop169.io?resize=360"
                    srcSet="https://crop169.io?resize=360 360w,https://crop169.io?resize=520 520w,https://crop169.io?resize=680 680w,https://crop169.io?resize=860 860w,https://crop169.io?resize=1200 1200w,https://crop169.io?resize=1500 1500w"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <div>
                <div>
                  <div>
                    Some Caption
                  </div>
                  <div
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SOME CREDITS",
                      }
                    }
                  />
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div>
          <div>
            <div>
              <ArticleBylineWithLinks
                ast={
                  Array [
                    Object {
                      "byline": Array [
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "Some byline",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "inline",
                        },
                      ],
                    },
                  ]
                }
                color="#1D1D1B"
              />
            </div>
            <div />
            <div>
              <div>
                <DatePublication
                  date="2015-03-13T18:54:58.000Z"
                  publication="TIMES"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article>
        <div>
          <div>
            <div>
              <h2>
                Advertisement
              </h2>
              <AdContainer
                slotName="inline-ad"
              />
            </div>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          isCommentEnabled={true}
          isSharingSavingEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "__typename": "StandardSlice",
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;
